--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     <meta name="twitter:description" value="What the Hack 2015 - 44-часовой хакатон для разработчиков"/>
     <meta name="twitter:image" value="http://wth.by/images/wth-main.png"/>
 
+    <link href="css/reset.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css"/>
     <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
     <link href='http://fonts.googleapis.com/css?family=Exo+2&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link href="css/new_style.css" rel="stylesheet" />
 
 
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
@@ -44,9 +46,29 @@
 <body>
 
 
-<section class="section section-1 centered">
+<header class="section section-1 centered">
 
     <div class="lang">
+        <a data-lang="ru-RU" href="#ru">ru</a>
+        <a data-lang="en-US" href="#en" class="lang-active">en</a>
+    </div>
+
+    <div class="logo">Reserved for logo...</div>
+
+    <h1 data-l10n-id="header_title"></h1>
+    <h2 data-l10n-id="header_date"></h2>
+
+    <nav class="top_nav centered">
+        <a href="/#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
+        <a href="/#program" data-l10n-id="nav_item_program" class="nav_item"></a>
+        <a href="/#location" data-l10n-id="nav_item_location" class="nav_item"></a>
+        <a href="/#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
+        <a href="/#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
+        <a href="/#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+    </nav>
+
+
+    <!--<div class="lang">
         <a data-lang="ru-RU" href="#ru">ru</a>
         <a data-lang="en-US" href="#en">en</a>
     </div>
@@ -76,7 +98,7 @@
            data-l10n-id="newsInFBGroup"></a>
     </div>
 
-    <!-- Program -->
+    &lt;!&ndash; Program &ndash;&gt;
         <div style="margin-top: 30px;" class="reg-btn-wrapper">
             <a href="http://html5.by/blog/wth2/" target="blank" title="" class="reg-btn white-btn"
                data-l10n-id="program"></a>
@@ -88,8 +110,8 @@
         <a href="https://www.facebook.com/groups/wthby/" target="_blank" title="" class="soc-link facebook-link"></a>
         <a href="https://twitter.com/wthby" target="_blank" title="" class="soc-link twitter-link"></a>
         <a href="http://vk.com/wthby" target="_blank" title="" class="soc-link vk-link"></a>
-    </div>
-</section>
+    </div>-->
+</header>
 
 <section class="section section-2 section-indent centered">
     <h2 class="main-caption">
