Header background, social icons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
 
-<header class="section section-1 centered">
+<header class="section section-1 centered top_header">
 
     <div class="lang">
         <a data-lang="ru-RU" href="#ru">ru</a>
@@ -57,7 +57,7 @@
     <div class="logo">Reserved for logo...</div>
 
     <h1 data-l10n-id="header_title"></h1>
-    <h2 data-l10n-id="header_date"></h2>
+    <h2 data-l10n-id="header_date" class="header_date"></h2>
 
     <nav class="top_nav centered">
         <a href="/#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
@@ -66,67 +66,16 @@
         <a href="/#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
         <a href="/#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
         <a href="/#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <div class="nav_item">
+            <a href="/#twitter" class="social twitter"></a>
+            <a href="/#facebook" class="social facebook"></a>
+        </div>
     </nav>
 
-
-    <!--<div class="lang">
-        <a data-lang="ru-RU" href="#ru">ru</a>
-        <a data-lang="en-US" href="#en">en</a>
-    </div>
-
-    <div class="logo">
-        <img src="images/wth-logo.svg" alt="What the hack"/>
-    </div>
-
-    <h1 class="text">
-        <span data-l10n-id="eventTitle"></span><br/>
-        <span class="date" data-l10n-id="eventWhenTitle"></span>
-    </h1>
-
-    <div class="countdown">
-        <div id="defaultCountdown"></div>
-        <div class="labels">
-            <span data-l10n-id="month"></span>
-            <span data-l10n-id="days"></span>
-            <span data-l10n-id="hours"></span>
-            <span data-l10n-id="minutes"></span>
-            <span data-l10n-id="seconds"></span>
-        </div>
-    </div>
-    <div class="reg-btn-wrapper">
-        <a href="https://www.facebook.com/groups/wthby" target="blank" title=""
-           class="reg-btn white-btn"
-           data-l10n-id="newsInFBGroup"></a>
-    </div>
-
-    &lt;!&ndash; Program &ndash;&gt;
-        <div style="margin-top: 30px;" class="reg-btn-wrapper">
-            <a href="http://html5.by/blog/wth2/" target="blank" title="" class="reg-btn white-btn"
-               data-l10n-id="program"></a>
-        </div>
-
-    <div class="soc-section centered">
-        <span data-l10n-id="weAreAtSocial"></span>
-
-        <a href="https://www.facebook.com/groups/wthby/" target="_blank" title="" class="soc-link facebook-link"></a>
-        <a href="https://twitter.com/wthby" target="_blank" title="" class="soc-link twitter-link"></a>
-        <a href="http://vk.com/wthby" target="_blank" title="" class="soc-link vk-link"></a>
-    </div>-->
 </header>
 
-<section class="section section-2 section-indent centered">
-    <h2 class="main-caption">
-        <span data-l10n-id="wtfwth"></span>
-        <span data-l10n-id="whatThat"></span>
-    </h2>
+<section class="section section-indent centered">
 
-    <p class="text wth">
-        <span data-l10n-id="eventDesc"></span>
-        <!--<a target="_blank" href="http://events.codeweek.eu/" title="codeweek" class="gold-link"><span
-                data-l10n-id="eventDescAnchor"></span></a>
-        <a target="_blank" href="https://twitter.com/CodeWeekEU" title="codeEU" class="blue-link"><span
-                data-l10n-id="eventDescTag"></span></a>-->
-    </p>
 </section>
 
 <section class="section section-3 section-indent centered">
