--- a/index.html
+++ b/index.html
@@ -74,7 +74,76 @@
 
 </header>
 
-<section class="section section-indent centered">
+<section class="section centered speakers">
+
+    <h1 class="speakers_header" data-l10n-id="nav_item_speakers_header"></h1>
+    <div class="speakers_wrapper">
+
+        <div class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/stepanova_300-300.jpg" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">Варя Степанова</h2>
+                <h3 class="speaker_theme" data-l10n-id="speaker1_theme"></h3>
+            </div>
+        </div><!--
+
+        --><div class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/Larchenko_300.jpg" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">Михаил Ларченко</h2>
+                <h3 class="speaker_theme" data-l10n-id="speaker2_theme"></h3>
+            </div>
+        </div><!--
+
+        --><div class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/dashukevich_300.jpg" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">Вова Дашукевич</h2>
+                <h3 class="speaker_theme" data-l10n-id="speaker3_theme"></h3>
+            </div>
+        </div><!--
+
+        --><div class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/miranovich_300.jpg" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">Марина Миронович</h2>
+                <h3 class="speaker_theme" data-l10n-id="speaker4_theme"></h3>
+            </div>
+        </div><!--
+
+        --><div class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/Monschke_300x300.jpeg" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">Jan Monschke</h2>
+                <h3 class="speaker_theme" data-l10n-id="speaker5_theme"></h3>
+            </div>
+        </div><!--
+
+        --><div class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/zhigalov_300x300.jpg" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">Сергей Жигалов</h2>
+                <h3 class="speaker_theme" data-l10n-id="speaker6_theme"></h3>
+            </div>
+        </div><!--
+
+        --><div class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">Зарема Халилова</h2>
+                <h3 class="speaker_theme" data-l10n-id="speaker7_theme"></h3>
+            </div>
+        </div><!--
+
+        --><div class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">Мурся</h2>
+                <h3 class="speaker_theme" data-l10n-id="speaker8_theme"></h3>
+            </div>
+        </div>
+
+    </div>
 
 </section>
 
