--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
     <h1 class="speakers_header" data-l10n-id="nav_item_speakers_header"></h1>
     <div class="speakers_wrapper">
 
-        <div class="speaker_wrapper">
+        <div class="overlay"></div>
+
+        <div data-url="stepanova" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/stepanova_300-300.jpg" />
             <div class="speaker_info">
                 <h2 class="speaker_name">Варя Степанова</h2>
@@ -87,7 +89,7 @@
             </div>
         </div><!--
 
-        --><div class="speaker_wrapper">
+        --><div data-url="larchenko" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/Larchenko_300.jpg" />
             <div class="speaker_info">
                 <h2 class="speaker_name">Михаил Ларченко</h2>
@@ -95,7 +97,7 @@
             </div>
         </div><!--
 
-        --><div class="speaker_wrapper">
+        --><div data-url="dashukevich" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/dashukevich_300.jpg" />
             <div class="speaker_info">
                 <h2 class="speaker_name">Вова Дашукевич</h2>
@@ -103,7 +105,7 @@
             </div>
         </div><!--
 
-        --><div class="speaker_wrapper">
+        --><div data-url="miranovich" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/miranovich_300.jpg" />
             <div class="speaker_info">
                 <h2 class="speaker_name">Марина Миронович</h2>
@@ -111,7 +113,7 @@
             </div>
         </div><!--
 
-        --><div class="speaker_wrapper">
+        --><div data-url="monschke" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/Monschke_300x300.jpeg" />
             <div class="speaker_info">
                 <h2 class="speaker_name">Jan Monschke</h2>
@@ -119,7 +121,7 @@
             </div>
         </div><!--
 
-        --><div class="speaker_wrapper">
+        --><div data-url="zhigalov" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/zhigalov_300x300.jpg" />
             <div class="speaker_info">
                 <h2 class="speaker_name">Сергей Жигалов</h2>
@@ -127,7 +129,7 @@
             </div>
         </div><!--
 
-        --><div class="speaker_wrapper">
+        --><div data-url="halimova" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/fff.png" />
             <div class="speaker_info">
                 <h2 class="speaker_name">Зарема Халилова</h2>
@@ -135,12 +137,173 @@
             </div>
         </div><!--
 
-        --><div class="speaker_wrapper">
+        --><div data-url="mursa" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/fff.png" />
             <div class="speaker_info">
                 <h2 class="speaker_name">Мурся</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker8_theme"></h3>
             </div>
+        </div>
+
+        <!-- Popups -->
+        <div class="popup stepanova">
+
+            <div class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/stepanova_300-300.jpg" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">Варя Степанова</h2>
+                    <p class="speaker_links"><a href="https://twitter.com/toivonens" target="_blank" class="speaker_twitter">@toivonens</a>
+                        ∙
+                        <a class="speaker_sponsor" target="_blank" href="http://sc5.io/">sc5</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="speaker1_theme"></h3>
+                </div>
+            </div>
+
+            <p data-l10n-id="speaker1_speech"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup larchenko">
+
+            <div class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/Larchenko_300.jpg" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">Михаил Ларченко</h2>
+                    <p class="speaker_links"><a href="http://twitter.com/ashorror" target="_blank" class="speaker_twitter">@ashorror</a>
+                        ∙
+                        <a class="speaker_sponsor" target="_blank" href="">WebNotBombs Amsterdam</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="speaker1_theme"></h3>
+                </div>
+            </div>
+
+            <p data-l10n-id="speaker2_speech"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup dashukevich">
+
+            <div data-url="dashukevich" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/dashukevich_300.jpg" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">Вова Дашукевич</h2>
+                    <p class="speaker_links"><a href="http://twitter.com/life__777" target="_blank" class="speaker_twitter">@life__777</a>
+                        ∙
+                        <a class="speaker_sponsor" target="_blank" href="http://xbsoftware.com/">xbsoftware/</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="speaker3_theme"></h3>
+                </div>
+            </div>
+
+            <p data-l10n-id="speaker3_speech"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup miranovich">
+
+            <div data-url="miranovich" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/miranovich_300.jpg" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">Марина Миронович</h2>
+                    <p class="speaker_links"><a href="http://twitter.com/obnoxious_mari" target="_blank" class="speaker_twitter">@obnoxious_mari</a>
+                        ∙
+                        <a class="speaker_sponsor" target="_blank" href="http://www.epam.com/">Epam</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="speaker4_theme"></h3>
+                </div>
+            </div>
+
+            <p data-l10n-id="speaker4_speech"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup monschke">
+
+            <div data-url="monschke" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/Monschke_300x300.jpeg" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">Jan Monschke</h2>
+                    <p class="speaker_links"><a href="http://twitter.com/thedeftone" target="_blank" class="speaker_twitter">@thedeftone</a>
+                        ∙
+                        <a class="speaker_sponsor" target="_blank" href="">SoundCloud</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="speaker5_theme"></h3>
+                </div>
+            </div>
+
+            <p data-l10n-id="speaker5_speech"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup zhigalov">
+
+            <div data-url="zhigalov" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/zhigalov_300x300.jpg" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">Сергей Жигалов</h2>
+                    <p class="speaker_links"><a href="http://twitter.com/sergey_zhigalov" target="_blank" class="speaker_twitter">@sergey_zhigalov</a>
+                        ∙
+                        <a class="speaker_sponsor" target="_blank" href="https://www.yandex.ru/">Yandex</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="speaker6_theme"></h3>
+                </div>
+            </div>
+
+            <p data-l10n-id="speaker6_speech"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup halimova">
+
+            <div data-url="halimova" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">Зарема Халилова</h2>
+                    <p class="speaker_links"><a href="" target="_blank" class="speaker_twitter"></a>
+                        ∙
+                        <a class="speaker_sponsor" target="_blank" href=""></a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="speaker7_theme"></h3>
+                </div>
+            </div>
+
+            <p data-l10n-id="speaker7_speech"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup mursa">
+
+            <div data-url="mursa" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">Мурся</h2>
+                    <p class="speaker_links"><a href="" target="_blank" class="speaker_twitter"></a>
+                        ∙
+                        <a class="speaker_sponsor" target="_blank" href=""></a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="speaker8_theme"></h3>
+                </div>
+            </div>
+
+            <p data-l10n-id="speaker8_speech"></p>
+
+            <span class="popup_close">×</span>
+
         </div>
 
     </div>
