Mobile popup fix, popup closing

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <h2 class="speaker_name">Вова Дашукевич</h2>
                     <p class="speaker_links"><a href="http://twitter.com/life__777" target="_blank" class="speaker_twitter">@life__777</a>
                         ∙
-                        <a class="speaker_sponsor" target="_blank" href="http://xbsoftware.com/">xbsoftware/</a>
+                        <a class="speaker_sponsor" target="_blank" href="http://xbsoftware.com/">xbsoftware</a>
                     </p>
                     <h3 class="speaker_theme" data-l10n-id="speaker3_theme"></h3>
                 </div>
