--- a/index.html
+++ b/index.html
@@ -333,12 +333,198 @@
 
 </section>
 
-<section class="section section-3 section-indent centered">
-    <div class="inside-section">
-        <h2 class="main-caption" data-l10n-id="mainGoal"></h2>
+<section class="section centered communities">
 
-        <p class="text" data-l10n-id="mainGoalText"></p>
+    <h1 class="speakers_header" data-l10n-id="nav_item_communities_header"></h1>
+    <div class="speakers_wrapper">
+
+        <div class="overlay"></div>
+
+        <div data-url="WebNotBombs" class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">WebNotBombs</h2>
+            </div>
+        </div><!--
+
+        --><div data-url="4front" class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">4front</h2>
+            </div>
+        </div><!--
+
+            --><div data-url="HelsinkiJS" class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">HelsinkiJS</h2>
+            </div>
+        </div><!--
+
+            --><div data-url="BerlinJS" class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">BerlinJS</h2>
+            </div>
+        </div><!--
+
+            --><div data-url="EkbJS" class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">EkbJS</h2>
+            </div>
+        </div><!--
+
+            --><div data-url="SPB" class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">SPB Frontend</h2>
+            </div>
+        </div><!--
+
+            --><div data-url="MoscowJS" class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="speaker_info">
+                <h2 class="speaker_name">MoscowJS</h2>
+            </div>
+        </div>
+
+        <!-- Popups -->
+        <div class="popup WebNotBombs">
+
+            <div class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">WebNotBombs</h2>
+                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Егор Мясников, Марина Миронович, Миша Ларченко, Илья Пухальский, Максим Ковалев</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community1_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup 4front">
+
+            <div class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">4front</h2>
+                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Дима Дудин</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community2_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup HelsinkiJS">
+
+            <div data-url="dashukevich" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">HelsinkiJS</h2>
+                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Олег Подсечин</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community3_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup BerlinJS">
+
+            <div data-url="miranovich" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">BerlinJS</h2>
+                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Tiffany Conroy, Robin Mehner , Michele Guido, Jan Lehnardt</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community4_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup EkbJS">
+
+            <div data-url="monschke" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">EkbJS</h2>
+                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Олег Мохов</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community5_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup SPB">
+
+            <div data-url="zhigalov" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">SPB Frontend</h2>
+                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers"></p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community6_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup MoscowJS">
+
+            <div data-url="halimova" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">MoscowJS</h2>
+                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Андрей Саломатин, Андрей Яманов, Андрей Гершун, Миша Башкиров, Василика Климова, Константин Буркалёв</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community7_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
     </div>
+
 </section>
 
 <div class="wave"></div>
