--- a/index.html
+++ b/index.html
@@ -527,23 +527,21 @@
 
 </section>
 
-<div class="wave"></div>
-<section class="section section-9 section-indent centered">
-    <h2 class="main-caption" data-l10n-id="whatIsFishka"></h2>
+<section class="section centered section-13">
+    <div id="map" style="width: 500px; height: 500px;"></div>
+    <div class="when-block">
+        <h2 class="main-caption" data-l10n-id="whenAndWhere"></h2>
 
-    <p class="singularity" data-l10n-id="whatIsFishkaText">
+        <div class="place">
+            <span class="date-event" data-l10n-id="when"></span>
 
-    </p>
+            <p data-l10n-id="where">
 
-    <p class="wtf-wth" data-l10n-id="whatIsFishkaShort">
-
-    </p>
-
-    <p class="target" data-l10n-id="whatIsFishkaTarget">
-
-    </p>
+            </p>
+        </div>
+        <img src="images/MailRu_Group_Logo.svg" alt="Imaguru" class="imaguru"/>
+    </div>
 </section>
-<div class="wave-down"></div>
 
 <section class="section section-4 section-indent centered">
     <h2 class="main-caption caption-indent" data-l10n-id="whatWillBe"></h2>
@@ -798,22 +796,6 @@
             Генеральный директор TUT.BY с 2012 года. Автор и разработчик нескольких белорусских контент-проектов. Защитил степень International Executive MBA в Baltic Management Institute. Любит путешествовать и собирает монеты.
         </p>
         <a target="_blank" href="https://www.facebook.com/alexander.chekan" title="" class="soc-link facebook-link"></a>
-    </div>
-</section>
-
-<section class="section centered section-13">
-    <div id="map" style="width: 500px; height: 500px;"></div>
-    <div class="when-block">
-        <h2 class="main-caption" data-l10n-id="whenAndWhere"></h2>
-
-        <div class="place">
-            <span class="date-event" data-l10n-id="when"></span>
-
-            <p data-l10n-id="where">
-
-            </p>
-        </div>
-        <img src="images/imaguru-logo.png" alt="Imaguru" class="imaguru"/>
     </div>
 </section>
 
