Nav links, colours

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     </div>
 
     <nav class="mobile_menu">
-        <a href="/#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
-        <a href="/#program" data-l10n-id="nav_item_program" class="nav_item"></a>
-        <a href="/#location" data-l10n-id="nav_item_location" class="nav_item"></a>
-        <a href="/#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
-        <a href="/#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
-        <a href="/#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <a href="#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
+        <a href="#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
+        <a href="#location" data-l10n-id="nav_item_location" class="nav_item"></a>
+        <a href="#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
+        <a href="#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
+        <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
         <div class="nav_item">
             <a href="/#twitter" class="social twitter"></a>
             <a href="/#facebook" class="social facebook"></a>
@@ -97,7 +97,7 @@
 
 <div class="overlay_mobile_menu"></div>
 
-<section class="section centered speakers">
+<section class="section centered speakers" id="speakers">
 
     <h1 class="speakers_header" data-l10n-id="nav_item_speakers_header"></h1>
     <div class="speakers_wrapper">
@@ -333,7 +333,7 @@
 
 </section>
 
-<section class="section centered communities">
+<section class="section centered communities" id="communities">
 
     <h1 class="speakers_header" data-l10n-id="nav_item_communities_header"></h1>
     <div class="speakers_wrapper">
@@ -527,7 +527,7 @@
 
 </section>
 
-<section class="section centered section-13">
+<section class="section centered section-13" id="location">
     <div id="map" style="width: 500px; height: 500px;"></div>
     <div class="when-block">
         <h2 class="main-caption" data-l10n-id="whenAndWhere"></h2>
