Nav links (main ones)

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
     <h2 data-l10n-id="header_date" class="header_date"></h2>
 
     <nav class="top_nav centered">
-        <a href="/#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
-        <a href="/#program" data-l10n-id="nav_item_program" class="nav_item"></a>
-        <a href="/#location" data-l10n-id="nav_item_location" class="nav_item"></a>
-        <a href="/#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
-        <a href="/#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
-        <a href="/#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <a href="#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
+        <a href="#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
+        <a href="#location" data-l10n-id="nav_item_location" class="nav_item"></a>
+        <a href="#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
+        <a href="#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
+        <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
         <div class="nav_item">
             <a href="/#twitter" class="social twitter"></a>
             <a href="/#facebook" class="social facebook"></a>
