fix styles for header and add new styles for speakers cards

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <a href="#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
         <a href="#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
         <a href="#location" data-l10n-id="nav_item_location" class="nav_item"></a>
-        <a href="#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
+        <!-- <a href="#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a> -->
         <a href="#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
         <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
-        <div class="nav_item">
-            <a href="/#twitter" class="social twitter"></a>
-            <a href="/#facebook" class="social facebook"></a>
+        <div class="social_item">
+            <a href="#twitter" class="social twitter"></a>
+            <a href="#facebook" class="social facebook"></a>
         </div>
     </nav>
 
@@ -88,8 +88,8 @@
         <a href="#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
         <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
         <div class="nav_item">
-            <a href="/#twitter" class="social twitter"></a>
-            <a href="/#facebook" class="social facebook"></a>
+            <a href="#twitter" class="social twitter"></a>
+            <a href="#facebook" class="social facebook"></a>
         </div>
     </nav>
 
@@ -102,66 +102,105 @@
     <h1 class="speakers_header" data-l10n-id="nav_item_speakers_header"></h1>
     <div class="speakers_wrapper">
 
-        <div class="overlay"></div>
-
         <div data-url="stepanova" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/stepanova_300-300.jpg" />
+            <div class="meta_wrapper">
+                <img class="speaker_photo" src="images/speakers/stepanova_300-300.jpg" />
+                <div class="meta">
+                    <a href="#" target="_blank" class="twitter">@twitter</a>
+                    <a href="community" class="community">Community</a>
+                </div>
+            </div>
             <div class="speaker_info">
                 <h2 class="speaker_name">Варя Степанова</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker1_theme"></h3>
             </div>
-        </div><!--
-
-        --><div data-url="larchenko" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/Larchenko_300.jpg" />
+        </div>
+        <div data-url="larchenko" class="speaker_wrapper">
+            <div class="meta_wrapper">
+                <img class="speaker_photo" src="images/speakers/Larchenko_300.jpg" />
+                <div class="meta">
+                    <a href="#" target="_blank" class="twitter">@twitter</a>
+                    <a href="community" class="community">Community</a>
+                </div>
+            </div>
             <div class="speaker_info">
                 <h2 class="speaker_name">Михаил Ларченко</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker2_theme"></h3>
             </div>
-        </div><!--
-
-        --><div data-url="dashukevich" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/dashukevich_300.jpg" />
+        </div>
+        <div data-url="dashukevich" class="speaker_wrapper">
+            <div class="meta_wrapper">
+                <img class="speaker_photo" src="images/speakers/dashukevich_300.jpg" />
+                <div class="meta">
+                    <a href="#" target="_blank" class="twitter">@twitter</a>
+                    <a href="community" class="community">Community</a>
+                </div>
+            </div>
             <div class="speaker_info">
                 <h2 class="speaker_name">Вова Дашукевич</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker3_theme"></h3>
             </div>
-        </div><!--
-
-        --><div data-url="miranovich" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/miranovich_300.jpg" />
+        </div>
+        <div data-url="miranovich" class="speaker_wrapper">
+            <div class="meta_wrapper">
+                <img class="speaker_photo" src="images/speakers/miranovich_300.jpg" />
+                <div class="meta">
+                    <a href="#" target="_blank" class="twitter">@twitter</a>
+                    <a href="community" class="community">Community</a>
+                </div>
+            </div>
             <div class="speaker_info">
                 <h2 class="speaker_name">Марина Миронович</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker4_theme"></h3>
             </div>
-        </div><!--
-
-        --><div data-url="monschke" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/Monschke_300x300.jpeg" />
+        </div>
+        <div data-url="monschke" class="speaker_wrapper">
+            <div class="meta_wrapper">
+                <img class="speaker_photo" src="images/speakers/Monschke_300x300.jpeg" />
+                <div class="meta">
+                    <a href="#" target="_blank" class="twitter">@twitter</a>
+                    <a href="community" class="community">Community</a>
+                </div>
+            </div>
             <div class="speaker_info">
                 <h2 class="speaker_name">Jan Monschke</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker5_theme"></h3>
             </div>
-        </div><!--
-
-        --><div data-url="zhigalov" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/zhigalov_300x300.jpg" />
+        </div>
+        <div data-url="zhigalov" class="speaker_wrapper">
+            <div class="meta_wrapper">
+                <img class="speaker_photo" src="images/speakers/zhigalov_300x300.jpg" />
+                <div class="meta">
+                    <a href="#" target="_blank" class="twitter">@twitter</a>
+                    <a href="community" class="community">Community</a>
+                </div>
+            </div>
             <div class="speaker_info">
                 <h2 class="speaker_name">Сергей Жигалов</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker6_theme"></h3>
             </div>
-        </div><!--
-
-        --><div data-url="halimova" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
+        </div>
+        <div data-url="halimova" class="speaker_wrapper">
+            <div class="meta_wrapper">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="meta">
+                    <a href="#" target="_blank" class="twitter">@twitter</a>
+                    <a href="community" class="community">Community</a>
+                </div>
+            </div>
             <div class="speaker_info">
                 <h2 class="speaker_name">Зарема Халилова</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker7_theme"></h3>
             </div>
-        </div><!--
-
-        --><div data-url="mursa" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
+        </div>
+        <div data-url="mursa" class="speaker_wrapper">
+            <div class="meta_wrapper">
+                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <div class="meta">
+                    <a href="#" target="_blank" class="twitter">@twitter</a>
+                    <a href="community" class="community">Community</a>
+                </div>
+            </div>
             <div class="speaker_info">
                 <h2 class="speaker_name">Мурся</h2>
                 <h3 class="speaker_theme" data-l10n-id="speaker8_theme"></h3>
@@ -169,6 +208,7 @@
         </div>
 
         <!-- Popups -->
+        <div class="overlay"></div>
         <div class="popup stepanova">
 
             <div class="speaker_wrapper_popup">
@@ -338,7 +378,6 @@
     <h1 class="speakers_header" data-l10n-id="nav_item_communities_header"></h1>
     <div class="speakers_wrapper">
 
-        <div class="overlay"></div>
 
         <div data-url="WebNotBombs" class="speaker_wrapper">
             <img class="speaker_photo" src="images/speakers/fff.png" />
